# path_nrm

./: .gitignore  CMakeLists.txt  README.md  path_nrm.c  path_nrm.h  test.c
